--- a/.github/workflows/devserveractions.yml
+++ b/.github/workflows/devserveractions.yml
@@ -13,6 +13,7 @@ jobs:
     name: Dev-Build
     runs-on: [self-hosted, windows, x64]
     steps:
-    - run: |
-      cd /d B:\Servers\Dev\ForTheMonkeysWebsite\Dev-Branch
-      git pull
+    steps:
+    - shell: powershell
+      run: |
+      cd "B:\Servers\Dev\ForTheMonkeysWebsite\Dev-Branch"; git pull
